--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "package.json": "pnpm sort-package-json"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.26.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "tilg": "0.1.1"
   },
   "devDependencies": {
@@ -47,5 +52,6 @@
     "vite": "5.3.5",
     "vite-plugin-mkcert": "1.17.5",
     "vite-tsconfig-paths": "4.3.2"
-  }
+  },
+  "packageManager": "pnpm@9.6.0"
 }
