--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "turbo vite.build",
+    "build": "vitest run && turbo vite.build",
     "build-storybook": "storybook build",
     "coverage": "vitest run --coverage",
     "dev": "turbo vite.dev",
@@ -12,6 +12,7 @@
     "preview": "turbo vite.preview",
     "storybook": "storybook dev -p 6006",
     "test": "vitest",
+    "test:coverage": "vitest --coverage",
     "test:ui": "vitest --ui",
     "vite.build": "vite build",
     "vite.dev": "vite --host",
@@ -25,6 +26,7 @@
     "package.json": "pnpm sort-package-json"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
@@ -36,7 +38,8 @@
     "react-router-dom": "6.26.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "tilg": "0.1.1"
+    "tilg": "0.1.1",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "1.6.1",
@@ -56,6 +59,7 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react-swc": "3.7.0",
+    "@vitest/coverage-v8": "^2.0.5",
     "@vitest/ui": "latest",
     "autoprefixer": "10.4.20",
     "husky": "9.1.4",
