--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "embla-carousel-react": "^8.1.8",
     "hugeicons-react": "^0.3.0",
     "react": "18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.3.1",
     "react-router-dom": "6.26.0",
     "tailwind-merge": "^2.4.0",
