create donate section and tests

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "turbo vite.build",
+    "build": "pnpm vite.build",
     "build-storybook": "storybook build",
     "coverage": "vitest run --coverage",
-    "dev": "turbo vite.dev",
+    "dev": "pnpm vite.dev",
     "lint": "tsc",
     "prepare": "is-ci || husky install",
-    "preview": "turbo vite.preview",
+    "preview": "pnpm vite.preview",
     "storybook": "storybook dev -p 6006",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -70,7 +70,6 @@
     "sort-package-json": "2.10.0",
     "storybook": "^8.2.8",
     "tailwindcss": "3.4.7",
-    "turbo": "2.0.12",
     "typescript": "5.5.4",
     "vite": "5.3.5",
     "vite-plugin-mkcert": "1.17.5",
