add: add image optimizer

--- a/package.json
+++ b/package.json
@@ -77,11 +77,14 @@
     "prettier": "3.3.3",
     "prettier-plugin-packagejson": "2.5.1",
     "prettier-plugin-tailwindcss": "0.6.5",
+    "sharp": "^0.33.5",
     "sort-package-json": "2.10.0",
     "storybook": "^8.2.8",
+    "svgo": "^3.3.2",
     "tailwindcss": "3.4.7",
     "typescript": "5.5.4",
     "vite": "5.3.5",
+    "vite-plugin-image-optimizer": "^1.1.8",
     "vite-plugin-mkcert": "1.17.5",
     "vite-tsconfig-paths": "4.3.2",
     "vitest": "^2.0.5"
